[package]
name = "unlam-crypto-rustchain"
version = "0.1.0"
authors = ["TrveFenris <tinchondrius@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1.26"
sha2 = "0.8.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
generic-array = "0.13.0"
lazy_static = "1.3.0"
